fixing variable spelling circleSelected

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proj-4-assessment",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pgrilo92.github.io/simple-react-project",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
